[workspace]
members = ["stable-typeid-macro"]
[package]
name = "stable-typeid"
version = "0.0.2"
edition = "2021"
description = "Generate a stable type identifier for rust structs and enums"
license-file = "LICENSE"
authors = ["BERADQ <adqber123@outlook.com>"]
repository = "https://github.com/BERADQ/stable-typeid" 
[dependencies]
serde = "1.0.195"
stable-typeid-macro = { version = "0.0.1", path = "./stable-typeid-macro" }
toml = "0.8.8"
[toolchain]
channel = "nightly"